--- a/homepage.css
+++ b/homepage.css
@@ -47,7 +47,7 @@ header {
     color: black;
 }
 
-#register-btns {
+.top-right-menu {
     float: right;
 
     /* align two buttons side by side */
@@ -56,20 +56,19 @@ header {
 
     width: 25%; /* to provide space between buttons */
     padding-top: 0px; /* adds additional padding on top to align buttons properly */
-    text-align: center;
 }
 
-#sign-up-btn {
+.menu-btn {
     font-family: "Tahoma";
-    font-size: 18px;
+    font-size: 20px;
 }
 
 /* push sign up link towards bottom a little bit to align with logo and log in button */
-#sign-up-div {
+.menu-div {
     padding-top: 10px;
 }
 
-#sign-up-btn:hover {
+.menu-btn:hover {
     color: blue;
 }
 
