--- a/user-account.css
+++ b/user-account.css
@@ -1,7 +1,3 @@
-/* override blue background from homepage file */
-body {
-    background-color: white;
-}
 
 /* dropdown menu on top right for settings */
 .settings {
@@ -72,3 +68,32 @@ body {
     width: 500px;
 }
 
+.light-h1 {
+    font-weight: 500;
+}
+
+input[type=text] {
+    width: 50%;
+    padding: 10px;
+    margin-top: 5px;
+    border-radius: 12px;
+    border: 1px solid;
+    font-family: "Tahoma", sans-serif;
+}
+
+.small-blue-btn {
+    border-radius: 12px;
+    border: none;
+    background-color: blue;
+    color: white;
+    padding: 10px;
+    font-size: 15px;
+    font-family: "Tahoma", sans-serif;
+
+}
+
+.small-blue-btn:hover {
+    cursor: pointer;
+    background-color: black;
+    color: white;
+}
