Wed, May 11, 2022, 10:31 AM +00:00

--- a/Dashboard.css
+++ b/Dashboard.css
@@ -52,13 +52,14 @@ body {
 }
 
 .content h1 {
-    text-align: center;
+    text-align: left;
     text-decoration: underline;
-    padding: 2em 1em 0.5em 1em;
-    font-size: xx-large;
+    padding: 2em 0.5em 0.2em 0.1em;
+    font-size: xxx-large;
     border-color: #283593;
     border-width: 0.2em;
     font-family: Tahoma;
+    font-weight: normal;
 }
 
 .buttons {
