--- a/Dashboard.css
+++ b/Dashboard.css
@@ -81,7 +81,7 @@ body {
 }
 
 .buttons button:hover {
-    background-color:#384397;
+    background-color: blue;
     color:#ffffff;
     font-weight: bold;
 
@@ -138,6 +138,7 @@ body {
     margin-bottom: 15px;
     padding-left: 40px;
     padding-right: 10px;
+    padding-bottom: 20px;
     align-content: center;
 }
 
@@ -167,6 +168,7 @@ body {
 .dateTime {
     margin: 0;
     padding: 0;
+    padding-top: 7px;
     align-self: left;
 }
 
