--- a/Dashboard.css
+++ b/Dashboard.css
@@ -178,3 +178,12 @@ body {
     margin-top: 0px;
     margin-left: 50px;
 }
+
+#dashboardSearch, input[type=text] {
+    width: 50%;
+    padding: 10px;
+    margin-top: 5px;
+    border-radius: 12px;
+    border: 1px solid;
+    font-family: "Tahoma", sans-serif;
+}
