Wed, May 11, 2022, 11:20 AM +00:00

--- a/Dashboard.css
+++ b/Dashboard.css
@@ -187,3 +187,8 @@ body {
     border: 1px solid;
     font-family: "Tahoma", sans-serif;
 }
+
+/* Icons  */
+#fa-solid, #fa-magnifying-glass {
+    color: white;
+}
