--- a/Dashboard.css
+++ b/Dashboard.css
@@ -191,6 +191,8 @@ body {
 #searchField {
     display: flex;
     justify-content: centre;
+    gap: 1.5em;
+    align-items: centre;
 }
 
 /* Icons  */
