--- a/Dashboard.css
+++ b/Dashboard.css
@@ -190,9 +190,8 @@ body {
 /* Events search field  */
 #searchField {
     display: flex;
-    justify-content: centre;
+    justify-content: center;
     gap: 1.5em;
-    align-items: centre;
 }
 
 /* Icons  */
