--- a/Dashboard.css
+++ b/Dashboard.css
@@ -197,5 +197,10 @@ body {
 /* Icons  */
 .fa-solid.fa-magnifying-glass {
     color: white;
-    font-size: 1.6em;
+    font-size: 2.5em;
+}
+
+.fa-solid.fa-sort {
+    color: white;
+    font-size: 2.5em;
 }
