--- a/Dashboard.css
+++ b/Dashboard.css
@@ -191,6 +191,8 @@ body {
 #searchField {
     display: flex;
     justify-content: center;
+    margin-right: 10px;
+    /* justify-content: center; */
     gap: 1.5em;
 }
 
