--- a/Dashboard.css
+++ b/Dashboard.css
@@ -183,7 +183,7 @@ body {
     padding: 10px;
     margin-top: 5px;
     border-radius: 12px;
-    border: 1px solid;
+    border: 5px solid;
     font-family: "Tahoma", sans-serif;
 }
 
@@ -198,11 +198,11 @@ body {
 
 /* Icons  */
 .fa-solid.fa-magnifying-glass {
-    color: white;
+    color: black;
     font-size: 2.5em;
 }
 
 .fa-solid.fa-sort {
-    color: white;
+    color: black;
     font-size: 2.5em;
 }
