--- a/Dashboard.css
+++ b/Dashboard.css
@@ -53,7 +53,7 @@ body {
 
 .content h1 {
     text-align: left;
-    text-decoration: underline;
+    /* text-decoration: underline; */
     padding: 2em 0.5em 0.5em 0.1em;
     font-size: xxx-large;
     border-color: #283593;
@@ -61,6 +61,8 @@ body {
     font-family: Tahoma;
     font-weight: normal;
 }
+
+.content a:
 
 .buttons {
     display: flex;
