--- a/Dashboard.css
+++ b/Dashboard.css
@@ -191,6 +191,19 @@ body {
     font-family: "Tahoma", sans-serif;
 }
 
+#viewMore {
+    margin-top: 30px;
+    text-align: center;
+}
+
+#viewMore a:active {
+    color: black;
+}
+
+#viewmore a:visited {
+    color:black;s
+}
+
 /* Events search field  */
 #searchField {
     display: flex;
