Wed, May 11, 2022, 11:59 AM +00:00

--- a/Dashboard.css
+++ b/Dashboard.css
@@ -194,6 +194,8 @@ body {
 #viewMore {
     margin-top: 30px;
     text-align: center;
+    font-weight: bold;
+    font-decoration: none;
 }
 
 #viewMore a:active {
