--- a/Dashboard.css
+++ b/Dashboard.css
@@ -88,8 +88,7 @@ body {
     background-color: blue;
     color:#ffffff;
     font-weight: bold;
-
-
+    cursor: pointer;
 }
 
 /* The dashboard */
@@ -220,10 +219,12 @@ body {
     color: black;
     font-size: 2.5em;
     padding-top: 10px;
+    cursor: pointer;
 }
 
 .fa-solid.fa-sort {
     color: black;
     font-size: 2.5em;
     padding-top: 10px;
+    cursor: pointer;
 }
