Wed, May 11, 2022, 12:07 PM +00:00

--- a/Dashboard.css
+++ b/Dashboard.css
@@ -119,7 +119,7 @@ body {
 
 /* Events */
 #events {
-    background-color: grey;
+    background-color: #cfcfcf;
     margin-top: 0px;
     padding-top: 20px;
     padding-bottom: 20px;
