--- a/Dashboard.css
+++ b/Dashboard.css
@@ -222,7 +222,7 @@ body {
     cursor: pointer;
 }
 
-.fa-solid.fa-sort {
+.fa-solid.fa-filter {
     color: black;
     font-size: 2.5em;
     padding-top: 10px;
