--- a/buttons.css
+++ b/buttons.css
@@ -33,3 +33,21 @@
     background-color: black;
     color: white;
 }
+
+.white-btn {
+    cursor: pointer;
+    background-color: white;
+    color: black;
+    border: 1px solid blue;
+    border-radius: 12px;
+    padding: 10px;
+    font-size: 15px;
+    font-family: "Tahoma", sans-serif;
+}
+
+.white-btn:hover {
+    cursor: pointer;
+    background-color: black;
+    color: white;
+    border: 1px solid black;
+}
