--- a/admin-dashboard.css
+++ b/admin-dashboard.css
@@ -10,6 +10,7 @@ body {
 #sidebar {
     display: block;
     background-color: blue;
-    margin-right: 70%;
-    padding: 100%;
+    height: 100%;
+    width: 30%;
+    position: fixed;
 }
