Fri, May 13, 2022, 2:45 AM +00:00

--- a/admin-dashboard.css
+++ b/admin-dashboard.css
@@ -8,9 +8,9 @@ body {
 }
 
 #sidebar {
-    display: block;
     background-color: blue;
     height: 100%;
-    width: 30%;
+    width: 26%;
     position: fixed;
+    padding-top: 10px;
 }
