Fri, May 13, 2022, 2:50 AM +00:00

--- a/admin-dashboard.css
+++ b/admin-dashboard.css
@@ -9,6 +9,11 @@ body {
     font-family: Tahoma, sans-serif;
 }
 
+/* Nav bar */
+#menu-spacer {
+    padding-bottom: 0px;
+}
+
 /* Sidebar */
 
 #sidebar {
