--- a/admin-dashboard.css
+++ b/admin-dashboard.css
@@ -12,6 +12,7 @@ body {
 /* Nav bar */
 #menu-spacer {
     padding-bottom: 0px;
+    border: none;
 }
 
 /* Sidebar */
@@ -28,4 +29,5 @@ body {
     color: white;
     font-weight: normal;
     text-align: center;
+    font-size: x-large;
 }
