Fri, May 13, 2022, 3:00 AM +00:00

--- a/admin-dashboard.css
+++ b/admin-dashboard.css
@@ -31,3 +31,8 @@ body {
     text-align: center;
     font-size: x-large;
 }
+
+#dashboardCatagories {
+    display: flex;
+    flex-direction: column;
+}
