--- a/admin-dashboard.css
+++ b/admin-dashboard.css
@@ -20,7 +20,7 @@ body {
 #sidebar {
     background-color: #363636;
     height: 100%;
-    width: 23%;
+    width: 25%;
     position: fixed;
     padding-top: 10px;
 }
@@ -30,15 +30,20 @@ body {
     font-weight: normal;
     text-align: center;
     font-size: x-large;
+    font-decoration: underline;
 }
 
 #dashboardCatagories {
     display: flex;
     flex-direction: column;
+    gap: 1em;
+    padding-top: 15px;
 }
 
 #dashboardCatagories button {
     padding: 20px;
+    padding-top: 5px;
+    padding-bottom: 5px;
     font-size: medium;
     margin-left: 30%;
     margin-right: 30%;
@@ -46,4 +51,8 @@ body {
     background-color: #363636;
     border: none;
     cursor: pointer;
+}
+
+#dashboardCatagories i {
+    padding-right: 20px;
 }
