Fri, May 13, 2022, 3:13 AM +00:00

--- a/admin-dashboard.css
+++ b/admin-dashboard.css
@@ -52,6 +52,20 @@ body {
     cursor: pointer;
 }
 
+#dashboardCatagories button:hover {
+    color: blue;
+}
+
 #dashboardCatagories i {
     padding-right: 20px;
+}
+
+/* Section */
+#adminSection {
+    margin-left: 25%;
+    padding-left: 40px;
+}
+
+#adminSection h1 {
+    font-weight: normal;
 }
