Fri, May 13, 2022, 4:15 AM +00:00

--- a/admin-dashboard.css
+++ b/admin-dashboard.css
@@ -27,7 +27,7 @@ body {
 
 #adminDashboard {
     color: white;
-    font-weight: normal;
+    font-weight: bold;
     text-align: center;
     font-size: x-large;
 }
