--- a/admin-dashboard.css
+++ b/admin-dashboard.css
@@ -71,3 +71,9 @@ body {
 #adminSection h1 {
     font-weight: normal;
 }
+
+#adminSection input[type=text] {
+    padding-top: 0px;
+    padding-bottom: 0px;
+    margin: 0px;
+}
