--- a/admin-dashboard.css
+++ b/admin-dashboard.css
@@ -64,6 +64,7 @@ body {
 #adminSection {
     display: flex;
     justify-content: space-between;
+    align-items: center;
     margin-left: 25%;
     padding-left: 40px;
 }
@@ -72,9 +73,12 @@ body {
     font-weight: normal;
 }
 
-#adminSection input[type=text] {
-    padding-top: 0px;
-    padding-bottom: 0px;
-    padding: 0px;
-    margin: 0px;
+#adminDashboardSearch, input[type=text] {
+    width: 30%;
+    padding: 20px;
+    margin-right: 5%;
+    border-radius: 12px;
+    border: 2px solid;
+    font-family: "Tahoma", sans-serif;
+    height: 20px;
 }
