--- a/admin-dashboard.css
+++ b/admin-dashboard.css
@@ -74,7 +74,7 @@ body {
 }
 
 #adminDashboardSearch, input[type=text] {
-    width: 30%;
+    /* width: 30%; */
     padding: 20px;
     margin-right: 5%;
     border-radius: 12px;
