Fri, May 13, 2022, 5:04 AM +00:00

--- a/admin-dashboard.css
+++ b/admin-dashboard.css
@@ -78,7 +78,8 @@ body {
 }
 
 #adminDashboardSearch, input[type=text] {
-    width: 100px;
+    width: 75%;
+    padding-right: 30px;
 }
 
 #FilterOptions {
