Fri, May 13, 2022, 5:06 AM +00:00

--- a/admin-dashboard.css
+++ b/admin-dashboard.css
@@ -80,6 +80,7 @@ body {
 #adminDashboardSearch, input[type=text] {
     width: 75%;
     padding-right: 30px;
+    margin-top: 15px;
 }
 
 #FilterOptions {
