--- a/admin-dashboard.css
+++ b/admin-dashboard.css
@@ -77,6 +77,18 @@ body {
 
 }
 
+.blueButton button {
+    padding: 1em 3em;
+    color: black;
+    font-size:1.5vw;
+    background-color: #ffffff;
+    border-color: blue;
+    border-width: 0.2em;
+    border-radius: 10px;
+    width: 100%;
+    font-family: Tahoma;
+}
+
 #adminDashboardSearch, input[type=text] {
     width: 75%;
     padding-right: 60px;
