--- a/Dashboard.css
+++ b/Dashboard.css
@@ -36,7 +36,7 @@ body {
     justify-content: center;
 }
 
-.BlueButton button {
+#BlueButton, button {
     padding: 1em 3em;
     color: black;
     font-size:1.5vw;
