Fri, May 13, 2022, 5:54 AM +00:00

--- a/admin-dashboard.css
+++ b/admin-dashboard.css
@@ -107,3 +107,9 @@ body {
     padding-left: 40px;
     margin-right: 5%;
 }
+
+/* Filter Options  */
+
+#FilterOptions button {
+    border-radius: 10px;
+}
