Fri, May 13, 2022, 6:14 AM +00:00

--- a/admin-dashboard.css
+++ b/admin-dashboard.css
@@ -116,5 +116,7 @@ body {
 
 table {
     margin-left: 30%;
-    border-spacing: 25px;
+    border-spacing: 100px 25px;
+    text-align: center;
+    border: 1px solid;
 }
