--- a/loginPage.css
+++ b/loginPage.css
@@ -72,11 +72,11 @@ h1 {
 }
 
 #name:focus {
-    border-bottom: 2px solid #0596fc;
+    border-bottom: 2px solid blue;
 }
 
 #name1:focus {
-    border-bottom: 2px solid #0596fc;
+    border-bottom: 2px solid blue;
 }
 
 div.inputs input{
@@ -119,7 +119,7 @@ button[type="submit"]{
 }
 
 button[type="submit"]:hover{
-    background: #1871ed;
+    background: blue;
     transition: 1s;
 }
 
