--- a/loginPage.css
+++ b/loginPage.css
@@ -2,6 +2,12 @@
     text-align: center;
 }
 
+#home-btn{
+    font-family: "Helvetica", sans-serif;
+    font-size: 40px;
+    color: blue;
+}
+
 *{
     box-sizing: border-box;
     font-family: tahoma, arial, sans-serif;
