--- a/signUpPage.css
+++ b/signUpPage.css
@@ -1,3 +1,10 @@
+#home-btn{
+    font-family: "Helvetica", sans-serif;
+    font-size: 40px;
+    color: blue;
+    text-decoration: none;
+}
+
 .sections {
     float: left;
     width: 50%;
