--- a/add_event.css
+++ b/add_event.css
@@ -10,7 +10,7 @@ h1 {
     padding: 50px;
     text-align: center;
     margin-top: 15px;
-    width: 100;
+    width: 100rem;
     max-width:40rem;
     margin:auto;
 }
