--- a/public/stylesheets/loginPage.css
+++ b/public/stylesheets/loginPage.css
@@ -40,7 +40,7 @@ h1 {
 }
 
 
-.fa-facebook-f {
+/* .fa-facebook-f {
     position: relative;
     transform: scale(2,2);
     left: -40px;
@@ -61,7 +61,7 @@ h1 {
     width: 38px;
     height: 18px;
     border-radius: 5px;
-}
+} */
 
 .socialMedia{
     position: relative;
@@ -141,32 +141,31 @@ span.or{
     font-size: 20px;
 }
 
-.googleBtn {
-    width: 50%;
-    height: 35px;
-    padding: 5px;
+.g-signin2 {
+    display: inline-block;
+    /* height: 30px;  */
+    /* width: 100%;
+    /* padding: 5px;
     border: none;
     border-radius: 20px;
     margin: 5px;
-    display: inline-block;
     font-size: 18px;
     background-color: #dd4b39;
     color: white;
-    text-align: center;
-    text-decoration: none;
+    text-decoration: none;  */
 }
 
 .googleBtn:hover{
     background: #cc3300;
 }
 
-.fa-google{
+/* .fa-google{
     padding-right: 10px;
     transform: scale(1.25,1.25);
     position: relative;
     top: 2px;
 
-}
+} */
 
 span.socMed{
     position: relative;
