--- a/public/stylesheets/add_event.css
+++ b/public/stylesheets/add_event.css
@@ -69,7 +69,7 @@ input[type="time"] {
     margin: 10px;
 }
 
-input[type=submit] {
+#submit-button{
     min-width:20%;
     background-color: #007fff;
     font-size: 1.2em;
