Tue, Jun 7, 2022, 3:51 AM +00:00

--- a/public/stylesheets/book_event.css
+++ b/public/stylesheets/book_event.css
@@ -72,7 +72,7 @@ input[type="checkbox"] {
     margin-right: 10px;
   }
 
-input[type=submit] {
+#submit-button{
     min-width: 25%;
     font-size: 1.2em;
     background-color: #007fff;
@@ -82,7 +82,7 @@ input[type=submit] {
     border-radius: 5px; /*rounded borders  */
 }
 
-input[type=submit]:hover {
+#submit-button:hover {
     background-color: #444dff;
     cursor: pointer;
 }
