Tue, Jun 7, 2022, 3:52 AM +00:00

--- a/public/stylesheets/add_event.css
+++ b/public/stylesheets/add_event.css
@@ -80,9 +80,11 @@ input[type="time"] {
     cursor: pointer;
 }
 
-input[type=submit]:hover {
+#submit-button:hover {
     background-color: #444dff;
+    cursor: pointer;
 }
+
 #cancel-button {
     width: 20%;
     background-color: white;
