Vue for dashboard

--- a/public/stylesheets/Dashboard.css
+++ b/public/stylesheets/Dashboard.css
@@ -82,7 +82,7 @@ body {
 }
 
 /* Events */
-#events {
+#eventsSection {
     background-color: #cfcfcf;
     margin-top: 0px;
     padding-top: 20px;
