--- a/public/stylesheets/buttons.css
+++ b/public/stylesheets/buttons.css
@@ -4,7 +4,7 @@
     color: white;
     background-color: blue;
 
-    width: 150px;
+    width: 50px;
     height: 50px;
 
     border: none;
@@ -43,6 +43,18 @@
     padding: 10px;
     font-size: 15px;
     font-family: "Tahoma", sans-serif;
+    width: 100px;
+}
+.event-white-btn {
+    cursor: pointer;
+    background-color: white;
+    color: black;
+    border: 1px solid blue;
+    border-radius: 12px;
+    padding: 10px;
+    font-size: 15px;
+    font-family: "Tahoma", sans-serif;
+    width: 100px;
 }
 
 .white-btn:hover {
