--- a/public/stylesheets/settings.css
+++ b/public/stylesheets/settings.css
@@ -10,6 +10,10 @@
     z-index: 1;
 }
 
+a {
+    cursor: pointer;
+}
+
 /* settings links */
 .settings a {
     display: block; /* make links take up whole width */
@@ -111,6 +115,10 @@ input[type=text], input[type=password] {
 .cancel-save {
     display: flex;
     justify-content: space-between;
-    width: 300px;
+    width: 150px;
     margin-left: 0;
+}
+
+#email-container .blue-btn {
+    width: 100px;
 }
