Wed, Jun 8, 2022, 1:25 AM +00:00

--- a/public/stylesheets/add_event.css
+++ b/public/stylesheets/add_event.css
@@ -101,6 +101,21 @@ input[type="time"] {
     background-color: #f5f5f5;
 }
 
+#login-button{
+    min-width:20%;
+    background-color: #007fff;
+    font-size: 1.2em;
+    color:white;
+    padding: 10px; /* adds space inside text field */
+    border: none;
+    border-radius: 5px; /*rounded borders  */
+    cursor: pointer;
+}
+
+#login-button:hover {
+    background-color: #444dff;
+    cursor: pointer;
+}
 
 #div-address {
     margin-top: 10px;
