--- a/public/stylesheets/loginPage.css
+++ b/public/stylesheets/loginPage.css
@@ -15,7 +15,7 @@
 }
 
 .LoginRectSection {
-    border: 2px solid black;
+    /* border: 2px solid black; */
     margin-left: 400px;
     margin-right: 400px;
     background: white;
