--- a/public/stylesheets/loginPage.css
+++ b/public/stylesheets/loginPage.css
@@ -14,7 +14,7 @@
     /* font-family: tahoma, arial, sans-serif; */
 
 .LoginRectSection {
-    /* border: 2px solid black; */
+    border: 2px solid black;
     margin-left: 400px;
     margin-right: 400px;
     background: white;
