--- a/public/stylesheets/loginPage.css
+++ b/public/stylesheets/loginPage.css
@@ -14,9 +14,10 @@
     /* font-family: tahoma, arial, sans-serif; */
 
 .LoginRectSection {
-    border: 2px solid black;
+    /* border: 2px solid black; */
     margin-left: 400px;
     margin-right: 400px;
+    margin:auto; 
     background: white;
     padding: 20px;
     height: 550px;
