--- a/public/stylesheets/loginPage.css
+++ b/public/stylesheets/loginPage.css
@@ -17,7 +17,7 @@
     /* border: 2px solid black; */
     margin-left: 400px;
     margin-right: 400px;
-    margin:auto; 
+    margin:auto;
     background: white;
     padding: 20px;
     height: 550px;
@@ -26,11 +26,11 @@
 }
 
 
-h1 {
+/* h1 {
     margin-left: 350px;
     margin-right: 350px;
 
-}
+} */
 
 .socialMedia{
     position: relative;
@@ -46,13 +46,13 @@ h1 {
     top: -2px;
 }
 
-#name:focus {
+/* #name:focus {
     border-bottom: 2px solid blue;
 }
 
 #name1:focus {
     border-bottom: 2px solid blue;
-}
+} */
 
 div.inputs input{
     width: 100%;
@@ -93,16 +93,6 @@ span.or{
 
 .g-signin2 {
     display: inline-block;
-    /* height: 30px;  */
-    /* width: 100%;
-    /* padding: 5px;
-    border: none;
-    border-radius: 20px;
-    margin: 5px;
-    font-size: 18px;
-    background-color: #dd4b39;
-    color: white;
-    text-decoration: none;  */
 }
 
 .googleBtn:hover{
@@ -124,7 +114,7 @@ span.socMed{
     font-size: 20px;
 }
 
-input:focus{
+/* input:focus{
     outline: none;
 }
 
@@ -134,5 +124,4 @@ input:focus::placeholder{
 
 div.inputs:focus{
     border-bottom: 5px solid blue;
-}
-
+} */
