--- a/public/stylesheets/loginPage.css
+++ b/public/stylesheets/loginPage.css
@@ -103,12 +103,12 @@ span.or{
 
 } */
 
-span.socMed{
+/* span.socMed{
     position: relative;
     top: 15px;
     left: 5px;
     font-size: 20px;
-}
+} */
 
 /* input:focus{
     outline: none;
