Wed, Jun 8, 2022, 2:53 AM +00:00

--- a/public/stylesheets/add_event.css
+++ b/public/stylesheets/add_event.css
@@ -38,7 +38,7 @@ h1 {
 
 input[type=text] {
     padding: 15px; /* adds space inside text field */
-    /* border: 1px solid #95a5a6; Grey border */
+    border: 1px solid #95a5a6; Grey border
     border-radius: 5px; /* rounded borders  */
     box-sizing: border-box; /* padding and width are included in total width/height and stays in place */
     margin-top: 15px;
