--- a/public/stylesheets/loginPage.css
+++ b/public/stylesheets/loginPage.css
@@ -34,7 +34,8 @@
 }
 
 #name,#name1 {
-    border: 1px solid #95a5a6; /* Grey border */
+    /* border: 1px solid #95a5a6; Grey border */
+    border: 1px solid black; /* Grey border */
     padding: 20px; /* adds space inside text field */
     margin: auto;
     width: 30%;
