Wed, Jun 8, 2022, 3:02 AM +00:00

--- a/public/stylesheets/Dashboard.css
+++ b/public/stylesheets/Dashboard.css
@@ -6,7 +6,7 @@
 
 body {
     margin:0;
-    font-family: Tahoma, sans-serif;
+    font-family: 'Open Sans', sans-serif;
 }
 
 /* Content element */
@@ -22,7 +22,7 @@ body {
     font-size: 50px; /* xxx-large? */
     border-color: #283593;
     border-width: 0.2em;
-    font-family: Tahoma;
+    font-family: 'Open Sans', sans-serif;
     font-weight: normal;
 }
 
