--- a/public/stylesheets/Dashboard.css
+++ b/public/stylesheets/Dashboard.css
@@ -41,7 +41,7 @@ body {
     color: black;
     font-size:1.5vw;
     background-color: #ffffff;
-    border-color: blue;
+    border-color: black;
     border-width: 0.2em;
     border-radius: 10px;
     width: 100%;
