--- a/public/stylesheets/Dashboard.css
+++ b/public/stylesheets/Dashboard.css
@@ -41,7 +41,7 @@ body {
     /* color: black; */
     font-size:1.5vw;
     background-color: #ffffff;
-    border-color: 0.5px solid black;
+    border: 2px solid black;
     border-radius: 5px;
     width: 100%;
     font-family: Tahoma;
