--- a/public/stylesheets/Dashboard.css
+++ b/public/stylesheets/Dashboard.css
@@ -38,17 +38,17 @@ body {
 
 #BlueButton, button {
     padding: 1em 3em;
-    /* color: black; */
+    color: white;
     font-size:1.5vw;
-    background-color: #ffffff;
-    border: 2px solid black;
+    background-color: #007fff;
+    border: 2px solid;
     border-radius: 5px;
     width: 100%;
     font-family: Tahoma;
 }
 
 .buttons button:hover {
-    background-color: blue;
+    background-color: #444dff;
     color:#ffffff;
     font-weight: bold;
     cursor: pointer;
