Wed, Jun 8, 2022, 3:10 AM +00:00

--- a/public/stylesheets/Dashboard.css
+++ b/public/stylesheets/Dashboard.css
@@ -50,7 +50,7 @@ body {
 .buttons button:hover {
     background-color: #444dff;
     color:#ffffff;
-    font-weight: bold;
+    /* font-weight: bold; */
     cursor: pointer;
 }
 
