--- a/public/stylesheets/Dashboard.css
+++ b/public/stylesheets/Dashboard.css
@@ -150,7 +150,7 @@ body {
     padding: 10px;
     margin-top: 10px;
     border-radius: 12px;
-    border: 1px solid;
+    /* border: 1px solid; */
     font-family: "Tahoma", sans-serif;
 }
 
