--- a/public/stylesheets/Dashboard.css
+++ b/public/stylesheets/Dashboard.css
@@ -83,7 +83,7 @@ body {
 
 /* Events */
 #eventsSection {
-    background-color: #cfcfcf;
+    background-color: #ecf0f1;
     margin-top: 0px;
     padding-top: 20px;
     padding-bottom: 20px;
