Wed, Jun 8, 2022, 3:26 AM +00:00

--- a/public/stylesheets/add_event.css
+++ b/public/stylesheets/add_event.css
@@ -71,9 +71,9 @@ input[type="time"] {
 
 #submit-button{
     min-width:20%;
-    background-color: #007fff;
+    background-color: #ecf0f1;
     font-size: 1.2em;
-    color:white;
+    color:black;
     padding: 15px; /* adds space inside text field */
     border: none;
     border-radius: 5px; /*rounded borders  */
