--- a/public/stylesheets/add_event.css
+++ b/public/stylesheets/add_event.css
@@ -87,9 +87,9 @@ input[type="time"] {
 
 #cancel-button {
     width: 20%;
-    background-color: #ecf0f1;
-    /* border-color: grey; */
-    /* border-width: 0.5px; */
+    background-color: white;
+    border-color: grey;
+    border-width: 0.5px;
     font-size: 1.2em;
     padding: 15px;
     border-radius: 5px; /*rounded borders  */
