--- a/public/stylesheets/signUpPage.css
+++ b/public/stylesheets/signUpPage.css
@@ -1,10 +1,3 @@
-#home-btn{
-    font-family: "Helvetica", sans-serif;
-    font-size: 40px;
-    color: blue;
-    text-decoration: none;
-}
-
 .sections {
     float: left;
     width: 50%;
@@ -33,7 +26,7 @@ div.picture1 {
 
 *{
     box-sizing: border-box;
-    font-family: tahoma, arial, sans-serif;
+    font-family: 'Open Sans', sans-serif;
 }
 
 
