--- a/public/stylesheets/loginPage.css
+++ b/public/stylesheets/loginPage.css
@@ -30,12 +30,12 @@
 
 #name,#name1 {
     /* border: 1px solid #95a5a6; Grey border */
-    border: 1px solid black; /* Grey border */
+    border-bottom: 1px solid grey; /* Grey border */
     padding: 20px; /* adds space inside text field */
     margin: auto;
     width: 30%;
     position: relative;
-    border-radius: 5px; /* rounded borders  */
+    border-radius: 9px; /* rounded borders  */
     box-sizing: border-box; /* padding and width are included in total width/height and stays in place */
     top: -2px;
 }
