Thu, Jun 9, 2022, 3:28 AM +00:00

--- a/public/stylesheets/add_event.css
+++ b/public/stylesheets/add_event.css
@@ -113,7 +113,7 @@ input[type="time"] {
 }
 
 #login-button:hover {
-    background-color: #444dff;
+    background-color: #444;
     color:#ffffff;
     cursor: pointer;
 }
