--- a/public/stylesheets/buttons.css
+++ b/public/stylesheets/buttons.css
@@ -1,6 +1,6 @@
 .blue-btn {
     font-size: 18px;
-    font-family: "Tahoma", sans-serif;
+    font-family: 'Open Sans', sans-serif;
     color: white;
     background-color: blue;
 
@@ -20,11 +20,11 @@
 .small-blue-btn {
     border-radius: 12px;
     border: none;
-    background-color: blue;
+    background-color: #444dff;
     color: white;
     padding: 10px;
     font-size: 15px;
-    font-family: "Tahoma", sans-serif;
+    font-family: 'Open Sans', sans-serif;
 
 }
 
@@ -42,7 +42,7 @@
     border-radius: 12px;
     padding: 10px;
     font-size: 15px;
-    font-family: "Tahoma", sans-serif;
+    font-family: 'Open Sans', sans-serif;
     width: 100px;
 }
 .event-white-btn {
@@ -53,7 +53,7 @@
     border-radius: 12px;
     padding: 10px;
     font-size: 15px;
-    font-family: "Tahoma", sans-serif;
+    font-family: 'Open Sans', sans-serif;
     width: 100px;
 }
 
