Thu, Jun 9, 2022, 3:58 AM +00:00

--- a/public/stylesheets/signUpPage.css
+++ b/public/stylesheets/signUpPage.css
@@ -1,24 +1,9 @@
-.sections {
+/* .sections {
     float: left;
     width: 50%;
     padding: 0px;
     height: 630px;
-}
-
-div.picture1 {
-    width:100%;
-    height:96.7%;
-    background-image:url('pic2.jpg');
-    background-repeat: no-repeat;
-    background-size: cover;
-    border-radius: 20px;
-    border-bottom-right-radius: 0px;
-    border-top-right-radius: 0px;
-    margin-left:70px;
-    padding:10px;
-    /* border: 2px solid black; */
-    border-right: none;
-}
+} */
 
 .signUp {
     text-align: center;
@@ -31,12 +16,10 @@ div.picture1 {
 
 
 .SignUpRectSection {
-
-    margin-right: 70px;
-    /* border: 2px solid black; */
-    background: white;
+    margin-left: 400px;
+    margin-right: 400px;
     padding: 20px;
-    height:610px;
+    /* height:610px; */
     border-radius: 20px;
     border-bottom-left-radius: 0px;
     border-top-left-radius: 0px;
@@ -138,32 +121,6 @@ span.or{
     font-size: 20px;
 }
 
-.googleBtn {
-    width: 50%;
-    height: 35px;
-    padding: 5px;
-    border: none;
-    border-radius: 20px;
-    margin: 5px;
-    display: inline-block;
-    font-size: 18px;
-    background-color: #dd4b39;
-    color: white;
-    text-align: center;
-    text-decoration: none;
-}
-
-.googleBtn:hover{
-    background: #cc3300;
-}
-
-.fa-google{
-    padding-right: 10px;
-    transform: scale(1.25,1.25);
-    position: relative;
-    top: 2px;
-
-}
 
 span.socMed{
     position: relative;
@@ -215,4 +172,46 @@ div.inputs:focus{
     width: 38px;
     height: 18px;
     border-radius: 5px;
+} */
+/*
+.googleBtn {
+    width: 50%;
+    height: 35px;
+    padding: 5px;
+    border: none;
+    border-radius: 20px;
+    margin: 5px;
+    display: inline-block;
+    font-size: 18px;
+    background-color: #dd4b39;
+    color: white;
+    text-align: center;
+    text-decoration: none;
+}
+
+.googleBtn:hover{
+    background: #cc3300;
+}
+
+.fa-google{
+    padding-right: 10px;
+    transform: scale(1.25,1.25);
+    position: relative;
+    top: 2px;
+
+} */
+
+/* div.picture1 {
+    width:100%;
+    height:96.7%;
+    background-image:url('pic2.jpg');
+    background-repeat: no-repeat;
+    background-size: cover;
+    border-radius: 20px;
+    border-bottom-right-radius: 0px;
+    border-top-right-radius: 0px;
+    margin-left:70px;
+    padding:10px; */
+    /* border: 2px solid black; */
+    /* border-right: none;
 } */
