Thu, Jun 9, 2022, 4:00 AM +00:00

--- a/public/stylesheets/loginPage.css
+++ b/public/stylesheets/loginPage.css
@@ -2,7 +2,7 @@
     text-align: center;
 }
 
-.LoginRectSection {
+.RectSection {
     /* border: 2px solid black; */
     margin-left: 400px;
     margin-right: 400px;
