--- a/public/stylesheets/add_event.css
+++ b/public/stylesheets/add_event.css
@@ -10,6 +10,9 @@ input:focus {
     outline: 2px solid #444dff;
     /* outline-offset: 2px; */
 }
+input[type="password"]:focus{
+    outline: none;
+}
 
 #content-div {
     padding: 50px;
