Thu, Jun 9, 2022, 4:35 AM +00:00

--- a/public/stylesheets/add_event.css
+++ b/public/stylesheets/add_event.css
@@ -108,7 +108,7 @@ input[type="time"] {
 #cancel-button:hover {
     background-color: #f5f5f5; */
 
-#login-button{
+#purple-button{
     min-width:30%;
     background-color:#444dff;
     font-size: 1.2em;
