--- a/public/stylesheets/Dashboard.css
+++ b/public/stylesheets/Dashboard.css
@@ -36,7 +36,7 @@ body {
     justify-content: center;
 }
 
-#BlueButton, button {
+#BlueButton, #GreyButton {
     padding: 1em 3em;
     color: black;
     font-size:1.5vw;
