--- a/public/stylesheets/Dashboard.css
+++ b/public/stylesheets/Dashboard.css
@@ -1,7 +1,7 @@
 /*Header elements*/
 
 body {
-    margin:0;
+    /* margin:0; */
     font-family: 'Open Sans', sans-serif;
     box-sizing: border-box;
 }
