--- a/public/stylesheets/add_event.css
+++ b/public/stylesheets/add_event.css
@@ -149,14 +149,6 @@ input[type="time"] {
     /* top: -2px; */
 }
 
-/* #name:focus {
-    border-bottom: 2px solid blue;
-}
-
-#name1:focus {
-    border-bottom: 2px solid blue;
-} */
-
 div.inputs input{
     width: 100%;
     height: 30px;
@@ -168,12 +160,6 @@ div.inputs input{
     position: relative;
     margin-top: 30px;
 }
-
-/* div.NoAccount{
-    position: relative;
-    color: grey;
-    /* top: 20px; */
-/* } */
 
 a:link.Account{
     color:grey;
@@ -200,18 +186,20 @@ span.or{
     background: #cc3300;
 }
 
+i{
+    margin-right: 0.5em;
+}
+
 #add-times {
-    width: 20%;
+    /* width: 20%; */
     background-color: #ecf0f1;
-    border-color: grey;
-    border-width: 0.5px;
-    font-size: 1.2em;
-    padding: 15px;
-    border-radius: 5px; /*rounded borders  */
-    font-family: Tahoma;
+    border: none;
+    font-size: 1em;
+    padding: 0.8em;
+    border-radius: 30px; /*rounded borders  */
+    cursor: pointer;
 }
 
 #add-times:hover {
     background-color: #f5f5f5;
-
 }
