Thu, Jun 9, 2022, 5:43 AM +00:00

--- a/public/stylesheets/add_event.css
+++ b/public/stylesheets/add_event.css
@@ -198,6 +198,7 @@ i{
     padding: 0.8em;
     border-radius: 10px; /*rounded borders  */
     cursor: pointer;
+    margin-top: 5px;
 }
 
 #add-times:hover {
