--- a/public/stylesheets/add_event.css
+++ b/public/stylesheets/add_event.css
@@ -2,6 +2,14 @@
     font-family: 'Open Sans', sans-serif;
 }
 
+.header-image{
+    background-image: url(Picture2.png”);
+    background-position: left;
+    background-repeat: no-repeat;
+    position: relative;
+    background-size: cover;
+}
+
 h1 {
     font-size: 2.5em;
 }
