Fri, Jun 10, 2022, 10:57 AM +00:00

--- a/public/stylesheets/add_event.css
+++ b/public/stylesheets/add_event.css
@@ -4,8 +4,8 @@
 
 .header-image{
     background: url('.stylesheets/Picture2.png');
-    /* width: 100px; */
-    /* background-position: left;
+    width: 100px;
+    background-position: left;
     background-repeat: no-repeat;
     position: relative;
     background-size: cover; */
