Fri, Jun 10, 2022, 10:58 AM +00:00

--- a/public/stylesheets/add_event.css
+++ b/public/stylesheets/add_event.css
@@ -3,12 +3,12 @@
 }
 
 .header-image{
-    background: url('.stylesheets/Picture2.png');
-    width: 100px;
+    background-image: url('./stylesheets/Picture2.png');
+    /* width: 100px; */
     background-position: left;
-    background-repeat: no-repeat;
-    position: relative;
-    background-size: cover; */
+    /* background-repeat: no-repeat; */
+    /* position: relative; */
+    /* background-size: cover;  */
 }
 
 h1 {
