Fri, Jun 10, 2022, 11:24 AM +00:00

--- a/public/stylesheets/add_event.css
+++ b/public/stylesheets/add_event.css
@@ -5,6 +5,7 @@
 .header-image{
     background-image: url('./stylesheets/Picture2.png');
     /* width: 100px; */
+    display:block;
     background-position: left;
     /* background-repeat: no-repeat; */
     /* position: relative; */
